@@ -5,7 +5,6 @@ import unicam.filiera.entity.PacchettoEntity;
 import unicam.filiera.entity.ProdottoEntity;
 import unicam.filiera.entity.ProdottoTrasformatoEntity;
 import unicam.filiera.model.*;
-import unicam.filiera.model.StatoProdotto;
 import unicam.filiera.repository.PacchettoRepository;
 import unicam.filiera.repository.ProdottoRepository;
 import unicam.filiera.repository.ProdottoTrasformatoRepository;
@@ -14,20 +13,25 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+/**
+ * Factory centrale per la creazione e ricostruzione degli Item
+ * (Prodotto, Pacchetto, ProdottoTrasformato).
+ */
 public final class ItemFactory {
 
     private ItemFactory() {}
 
-    // Tipizza su BaseItemDto per evitare Object
+    /** Wrapper dati di input */
     public static record Data(BaseItemDto dto, String creatore) {}
 
     private static final Map<ItemTipo, Function<Data, Item>> registry = new EnumMap<>(ItemTipo.class);
 
     static {
-        // --- PRODOTTO ---
+        // === PRODOTTO ===
         registry.put(ItemTipo.PRODOTTO, data -> {
             if (!(data.dto() instanceof ProdottoDto dto)) {
                 throw new IllegalArgumentException("DTO non valido per PRODOTTO");
@@ -46,7 +50,7 @@ public final class ItemFactory {
                     .build();
         });
 
-        // --- PACCHETTO ---
+        // === PACCHETTO ===
         registry.put(ItemTipo.PACCHETTO, data -> {
             if (!(data.dto() instanceof PacchettoDto dto)) {
                 throw new IllegalArgumentException("DTO non valido per PACCHETTO");
@@ -66,7 +70,7 @@ public final class ItemFactory {
                     .build();
         });
 
-        // --- TRASFORMATO ---
+        // === TRASFORMATO ===
         registry.put(ItemTipo.TRASFORMATO, data -> {
             if (!(data.dto() instanceof ProdottoTrasformatoDto dto)) {
                 throw new IllegalArgumentException("DTO non valido per TRASFORMATO");
@@ -86,7 +90,7 @@ public final class ItemFactory {
                                     && f.getDescrizioneFase() != null && !f.getDescrizioneFase().isBlank()
                                     && f.getProduttoreUsername() != null && !f.getProduttoreUsername().isBlank()
                                     && f.getProdottoOrigineId() != null)
-                            .collect(Collectors.toList()))
+                            .toList())
                     .certificati(toOriginalNames(dto.getCertificati()))
                     .foto(toOriginalNames(dto.getFoto()))
                     .creatoDa(data.creatore())
@@ -96,7 +100,7 @@ public final class ItemFactory {
         });
     }
 
-    // Ignora file null, vuoti o con filename blank
+    /** Utility: estrae i nomi file validi da MultipartFile */
     private static List<String> toOriginalNames(List<MultipartFile> files) {
         return (files == null)
                 ? List.of()
@@ -132,89 +136,100 @@ public final class ItemFactory {
     public static Prodotto creaProdotto(ProdottoDto dto, String creatore) {
         return (Prodotto) creaItem(dto, creatore);
     }
+
     public static Pacchetto creaPacchetto(PacchettoDto dto, String creatore) {
         return (Pacchetto) creaItem(dto, creatore);
     }
+
     public static ProdottoTrasformato creaProdottoTrasformato(ProdottoTrasformatoDto dto, String creatore) {
         return (ProdottoTrasformato) creaItem(dto, creatore);
     }
 
     /* =========================
-       Ricostruzione da ID
+       Ricostruzione da Entity con tipo esplicito
     ========================= */
     public static Item fromId(Long id,
+                              ItemTipo tipo,
                               ProdottoRepository prodottoRepo,
                               PacchettoRepository pacchettoRepo,
                               ProdottoTrasformatoRepository trasformatoRepo) {
-        if (id == null) throw new IllegalArgumentException("Id non può essere null");
-
-        // Prodotto
-        var prodottoOpt = prodottoRepo.findById(id);
-        if (prodottoOpt.isPresent()) {
-            ProdottoEntity e = prodottoOpt.get();
-            return new Prodotto.Builder()
-                    .id(e.getId())
-                    .nome(e.getNome())
-                    .descrizione(e.getDescrizione())
-                    .indirizzo(e.getIndirizzo())
-                    .quantita(e.getQuantita())
-                    .prezzo(e.getPrezzo())
-                    .creatoDa(e.getCreatoDa())
-                    .stato(e.getStato())
-                    .commento(e.getCommento())
-                    .build();
+        if (id == null || tipo == null) {
+            throw new IllegalArgumentException("Id e tipo non possono essere null");
         }
 
-        // Pacchetto
-        var pacchettoOpt = pacchettoRepo.findById(id);
-        if (pacchettoOpt.isPresent()) {
-            PacchettoEntity e = pacchettoOpt.get();
-            return new Pacchetto.Builder()
-                    .id(e.getId())
-                    .nome(e.getNome())
-                    .descrizione(e.getDescrizione())
-                    .indirizzo(e.getIndirizzo())
-                    .quantita(e.getQuantita())
-                    .prezzo(e.getPrezzo())
-                    .creatoDa(e.getCreatoDa())
-                    .stato(e.getStato())
-                    .commento(e.getCommento())
-                    .prodottiIds(
-                            e.getProdotti() != null
-                                    ? e.getProdotti().stream().map(ProdottoEntity::getId).toList()
-                                    : List.of()
-                    )
-                    .build();
-        }
+        return switch (tipo) {
+            case PRODOTTO -> prodottoRepo.findById(id)
+                    .map(e -> new Prodotto.Builder()
+                            .id(e.getId())
+                            .nome(e.getNome())
+                            .descrizione(e.getDescrizione())
+                            .indirizzo(e.getIndirizzo())
+                            .quantita(e.getQuantita())
+                            .prezzo(e.getPrezzo())
+                            .creatoDa(e.getCreatoDa())
+                            .stato(e.getStato())
+                            .commento(e.getCommento())
+                            .build())
+                    .orElseThrow(() -> new IllegalArgumentException("Prodotto con id=" + id + " non trovato"));
 
-        // Trasformato
-        var trasformatoOpt = trasformatoRepo.findById(id);
-        if (trasformatoOpt.isPresent()) {
-            ProdottoTrasformatoEntity e = trasformatoOpt.get();
-            return new ProdottoTrasformato.Builder()
-                    .id(e.getId())
-                    .nome(e.getNome())
-                    .descrizione(e.getDescrizione())
-                    .indirizzo(e.getIndirizzo())
-                    .quantita(e.getQuantita())
-                    .prezzo(e.getPrezzo())
-                    .creatoDa(e.getCreatoDa())
-                    .stato(e.getStato())
-                    .commento(e.getCommento())
-                    .fasiProduzione(
-                            e.getFasiProduzione() != null
-                                    ? e.getFasiProduzione().stream()
-                                    .map(f -> new FaseProduzione(
-                                            f.getDescrizioneFase(),
-                                            f.getProduttoreUsername(),
-                                            f.getProdottoOrigineId()
-                                    ))
-                                    .toList()
-                                    : List.of()
-                    )
-                    .build();
-        }
+            case PACCHETTO -> pacchettoRepo.findById(id)
+                    .map(e -> new Pacchetto.Builder()
+                            .id(e.getId())
+                            .nome(e.getNome())
+                            .descrizione(e.getDescrizione())
+                            .indirizzo(e.getIndirizzo())
+                            .quantita(e.getQuantita())
+                            .prezzo(e.getPrezzo())
+                            .creatoDa(e.getCreatoDa())
+                            .stato(e.getStato())
+                            .commento(e.getCommento())
+                            .prodottiIds(
+                                    e.getProdotti() != null
+                                            ? e.getProdotti().stream().map(ProdottoEntity::getId).toList()
+                                            : List.of()
+                            )
+                            .build())
+                    .orElseThrow(() -> new IllegalArgumentException("Pacchetto con id=" + id + " non trovato"));
 
-        throw new IllegalArgumentException("Item con id=" + id + " non trovato");
+            case TRASFORMATO -> trasformatoRepo.findById(id)
+                    .map(e -> new ProdottoTrasformato.Builder()
+                            .id(e.getId())
+                            .nome(e.getNome())
+                            .descrizione(e.getDescrizione())
+                            .indirizzo(e.getIndirizzo())
+                            .quantita(e.getQuantita())
+                            .prezzo(e.getPrezzo())
+                            .creatoDa(e.getCreatoDa())
+                            .stato(e.getStato())
+                            .commento(e.getCommento())
+                            .fasiProduzione(
+                                    e.getFasiProduzione() != null
+                                            ? e.getFasiProduzione().stream()
+                                            .map(f -> new FaseProduzione(
+                                                    f.getDescrizioneFase(),
+                                                    f.getProduttoreUsername(),
+                                                    f.getProdottoOrigineId()
+                                            ))
+                                            .toList()
+                                            : List.of()
+                            )
+                            .build())
+                    .orElseThrow(() -> new IllegalArgumentException("Trasformato con id=" + id + " non trovato"));
+        };
+    }
+
+    /* =========================
+       Variante sicura con Optional
+    ========================= */
+    public static Optional<Item> tryFromId(Long id,
+                                           ItemTipo tipo,
+                                           ProdottoRepository prodottoRepo,
+                                           PacchettoRepository pacchettoRepo,
+                                           ProdottoTrasformatoRepository trasformatoRepo) {
+        try {
+            return Optional.of(fromId(id, tipo, prodottoRepo, pacchettoRepo, trasformatoRepo));
+        } catch (IllegalArgumentException ex) {
+            return Optional.empty();
+        }
     }
 }
